添加机器token
