# server/docs/swagger.json
@@ -3115,18 +3115,11 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/Customize.Machine"
+                            "$ref": "#/definitions/request.GetDataReq"
                         }
                     }
                 ],
-                "responses": {
-                    "200": {
-                        "description": "{\"success\":true,\"data\":{},\"msg\":\"创建成功\"}",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
+                "responses": {}
             }
         },
         "/machine/deleteMachine": {
@@ -7198,6 +7191,32 @@
                 "id": {
                     "description": "主键ID",
                     "type": "integer"
+                }
+            }
+        },
+        "request.GetDataReq": {
+            "type": "object",
+            "required": [
+                "data_type_ids",
+                "end_time",
+                "machine_ids",
+                "start_time"
+            ],
+            "properties": {
+                "data_type_ids": {
+                    "type": "string"
+                },
+                "end_time": {
+                    "type": "string"
+                },
+                "machine_ids": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "start_time": {
+                    "type": "string"
                 }
             }
         },
